force-app/main/default/objects/mkto_si__UserPreferences__c/fields/mkto_si__Deactivate_trigger__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Deactivate_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to remove line break from last interesting moment field,
linebreak persists in  last interesting moment Desc field</description>
    <label>Deactivate_trigger</label>
    <type>Checkbox</type>
</CustomField>