force-app/main/default/objects/mkto_si__UserPreferences__c/fields/mkto_si__LastWhatIsNewVersion__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__LastWhatIsNewVersion__c</fullName>
    <label>Last What&apos;s New Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>