force-app/main/default/objects/mkto_si__UserPreferences__c/fields/mkto_si__ShowNoRestMessage__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__ShowNoRestMessage__c</fullName>
    <defaultValue>&quot;yes&quot;</defaultValue>
    <label>Show No Rest Message</label>
    <length>10</length>
    <type>Text</type>
</CustomField>